--- a/css/stylesheetGlobal.css
+++ b/css/stylesheetGlobal.css
@@ -1,27 +1,32 @@
-h1{
+h1 {
     text-align: center;
     font-size: 50px;
     text-transform: uppercase;
-    font-family: "Roboto", sans-serif;  
+    font-family: "Roboto", sans-serif;
 }
 
-body{
+body {
     background-color: #ffffff30;
     width: 100%;
     height: 100%;
     margin: 0px;
 }
 
-.link{
+.link {
     text-align: center;
 }
 
 .site-content-buffer.responsive {
     padding-top: 50px;
-    
+
 }
 
-html{
+html {
     -webkit-font-smoothing: antialiased;
 }
 
+
+body::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+}
