--- a/css/stylesheetNavbar.css
+++ b/css/stylesheetNavbar.css
@@ -4,7 +4,7 @@
   .header {
   overflow: hidden;
   background-color: #282931;
-  padding: 2.2vh 1.042vw;
+  padding: 16px;
   display: flex;
   align-items: center;
   }
@@ -67,11 +67,11 @@
   /*adds a triangle shape below the navbar by creating a second triangle and hidding it behind the first one*/
   .triangleshape {
     z-index: 1;
-    width: 100%;
+    width: 100vw;
     background-color: #282931;
-    padding: 25px;
+    padding: 3.438vh 1.628vw;
     clip-path: polygon(100% 0%, 0 0, 80% 100%);
-    top: 107px;
+    top: 14.714vh;
   }
 
   /*adds a shadow to the triangle below the navbar*/
